--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 Flask==0.10.1
+Flask-SQLAlchemy==2.0
 Flask-Script==2.0.5
 Jinja2==2.7.3
 MarkupSafe==0.23
+SQLAlchemy==0.9.8
 Werkzeug==0.9.6
 coverage==3.7.1
 elasticsearch==1.2.0
